--- a/biography.html
+++ b/biography.html
@@ -164,7 +164,7 @@
       <h2>
       Dr. Chebolu Seshagiri Rao      </h2>
       <p>
-	  'Hindi Astavadhani' Dr. Chebolu Seshagiri Rao (b Feb 10, 1943 – d April 9, 2015) is one of the most eminent Hindi scholar from South India in recent times. He lived in Rajamahendravaram in East Godavari District of Andhra Pradesh of South India. His magnum opus is ‘ Hindi Astavadhanam ’. He was awarded ‘ Padma Bhushan ’ Moturi Satyanarayana Award by AP Hindi Academy, ‘ Visista Hindi SeviPurskar ’ from DBHP Sabha, Chennai Andhra Pradesh Hindi Academy Award for his contributions to Hindi Language and literature.
+	  'Hindi Astavadhani' Dr. Chebolu Seshagiri Rao (b Feb 10, 1943  d: April 9, 2015) is one of the most eminent Hindi scholar from South India in recent times. He lived in Rajamahendravaram in East Godavari District of Andhra Pradesh of South India. His magnum opus is ‘ Hindi Astavadhanam ’. He was awarded ‘ Padma Bhushan ’ Moturi Satyanarayana Award by AP Hindi Academy, ‘ Visista Hindi SeviPurskar ’ from DBHP Sabha, Chennai Andhra Pradesh Hindi Academy Award for his contributions to Hindi Language and literature.
 	  </p>
       
     </div>
