--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div id="banner">
     
       <ul id="home-banner">
-              <li> <img src="./banners/bannner1.jpg" alt="img">
+              <li> <img src="./banners/bannner.jpg" alt="img">
 			<div class="holder">
 			</div>
       </ul>
