--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                 
               </div>
 
-              <!--<div class="text"> <!--<strong class="title"><i class="fa fa-tags"></i>Politics, Business, Elections, Donations</strong>-->
-               <!-- <h4>Kala Prapoorna award</h4>
+              <div class="text"> <strong class="title"><i class="fa fa-tags"></i>Politics, Business, Elections, Donations</strong>
+              <h4>Kala Prapoorna award</h4>
                 <p>Andhra University honored him with Kala Prapoorna in 1978. The Government of India honoured him with the Padma Shri in 1977 and the second highest civilian award, the Padma Bhushan in 1992.</p>                <a class="readmore" href="http://drcnarayanareddy.com/awards/awards_details/Kala_Prapoorna_award">Read More</a>
                 <div class="about-me-socila"> <strong class="title1">Share:</strong><br />
                   <ul>
