--- a/gallery.html
+++ b/gallery.html
@@ -63,16 +63,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="gallery-bottom">
 				<div class="gallery-1">
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/bannner1.jpg" data-lightbox="example-set"><img class="example-image" src="images/bannner1.jpg" alt=""/></a>
+						<a class="example-image-link" href="avadhanam at dbhp sabha chennai.jpg" data-lightbox="example-set"><img class="example-image" src="avadhanam at dbhp sabha chennai.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/big pic 2-4.jpg" data-lightbox="example-set"><img class="example-image" src="images/big pic 2-4.jpg" alt=""/></a>
+						<a class="example-image-link" href="AvadhanamAtBhimavaram.jpg" data-lightbox="example-set"><img class="example-image" src="AvadhanamAtBhimavaram.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/big pic 2-5.jpg" data-lightbox="example-set"><img class="example-image" src="images/big pic 2-5.jpg" alt=""/></a>
+						<a class="example-image-link" href="AvadhanamAtRJY1993HindetarHindiNavalekhakShibir.jpg" data-lightbox="example-set"><img class="example-image" src="AvadhanamAtRJY1993HindetarHindiNavalekhakShibir.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/big pics0002.jpg" data-lightbox="example-set"><img class="example-image" src="images/big pics0002.jpg" alt=""/></a>
+						<a class="example-image-link" href="AvadhanamAtTelecomOffice.jpg" data-lightbox="example-set"><img class="example-image" src="AvadhanamAtTelecomOffice.jpg" alt=""/></a>
 					</div>
 					<div class="clearfix"></div>
 				</div>
