--- a/gallery.html
+++ b/gallery.html
@@ -78,16 +78,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="gallery-1">
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/big pics0003.jpg" data-lightbox="example-set"><img class="example-image" src="images/big pics0003.jpg" alt=""/></a>
+						<a class="example-image-link" href="rossiah felicitation.jpg" data-lightbox="example-set"><img class="example-image" src="rossiah felicitation.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/DBHPSabhaMadras-VisistaHindiSevi-HindiPracharSamachar-Press.jpg" data-lightbox="example-set"><img class="example-image" src="images/DBHPSabhaMadras-VisistaHindiSevi-HindiPracharSamachar-Press.jpg" alt=""/></a>
+						<a class="example-image-link" href="with rossiah.jpg" data-lightbox="example-set"><img class="example-image" src="with rossiah.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/m_image1.jpg" data-lightbox="example-set"><img class="example-image" src="images/m_image1.jpg" alt=""/></a>
+						<a class="example-image-link" href="with banarasi das gupta.jpg" data-lightbox="example-set"><img class="example-image" src="with banarasi das gupta.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="images/m_image2.jpg" data-lightbox="example-set"><img class="example-image" src="images/m_image2.jpg" alt=""/></a>
+						<a class="example-image-link" href="FelicitationByRouthu.jpg" data-lightbox="example-set"><img class="example-image" src="FelicitationByRouthu.jpg" alt=""/></a>
 					</div>
 					<div class="clearfix"></div>
 				</div>
