--- a/Astavadhanam.html
+++ b/Astavadhanam.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -75,7 +74,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    
       <p align="justify">
 		
-		    <p>Avadhanam, is an intellectual  discipline of highest order. This art refers to an ancient Indian skill, which  apparently has been dying &amp; there are very few living legends who can  perform. It is an exercise of the mind, which demands simultaneously, range and  focus. It subjects the Avadhani&rsquo;s awareness; concentration, poetic excellence,  retentive and analytical powers to the severest of tests. The Avadhani has to  acquire the capacity to let his mind dwell on a variety of challenging and  creative tasks set by Pruchchakas (Questioners), whose assigned role is to  elevate the exercise to its highest potential.   First, let&rsquo;s get the terminology out of the way:<br />
+		  Avadhanam, is an intellectual  discipline of highest order. This art refers to an ancient Indian skill, which  apparently has been dying &amp; there are very few living legends who can  perform. It is an exercise of the mind, which demands simultaneously, range and  focus. It subjects the Avadhani&rsquo;s awareness; concentration, poetic excellence,  retentive and analytical powers to the severest of tests. The Avadhani has to  acquire the capacity to let his mind dwell on a variety of challenging and  creative tasks set by Pruchchakas (Questioners), whose assigned role is to  elevate the exercise to its highest potential.   First, let&rsquo;s get the terminology out of the way:<br />
+			<br />
+		 •	 		Avadhanam  is Concentration of Mind. <br />
+		 •    		Avadhani  is the performer of the feat.  The feat  involves demonstrating outstanding ability to concentrate, retain, sharp mind  &amp; possess a wide range of knowledge on subject area. <br />
+		 •   	 	Asta  means eight; ability to demonstrate 8 fold concentration. In this case the  Avadhani&rsquo;s ability is tested by all the eigth Prucchakas. <br />
+		      <br />
+			  
+			  The  framework within which Astavadhanam is performed is well known. Astavadhanam  means simultaneous completion of eight intellectual and literary tasks set by  eight Pruchchakas. Astavadhanam, which is essentially an exercise in Telugu,  assumes a different format in Hindi. It is performed by an erudite scholar in  the presence of learned audience.  Avadhanam essentially has two parts called <em>Poorva  Bhag</em> and <em>Uttar Bhag</em>. <em>Poorva Bhag</em> starts with <em>Guruvandana</em> &amp; <em>Istadev Vandana</em> by Astavadhani and then all Pruchachakas will pose  different tasks to Avadhani.   Various tasks of the Hindi Astavadhan are as  follows.<br />
+		      <br />
+			 <b> Dattapadi :</b>  It is composition of  a poem incorporating four words and the meaning or idea prescribed by the  Pruchchaka.<br />
+		      <b>Nishiddhakshari :</b>  This task aims  to beset with complications at every stage. The Pruchchaka is at liberty to  restrict the use of certain letters of his choice in the task of poetic  composition for the Avadhani.<br />
+		      <b>Chitrakshari :</b>  It consists of the  composition of a poem of two lines of eight letters each on given subject. Avadhani  is expected to furnish the letters one by one usually demanded in an irregular  order.<br />
+		      <b>Vyasthakshari :</b> The Pruchchaka  corresponding to this category furnishes eight letters of a word or phrase of  his choice in an irregular order at irregular intervals. The Avadhani is  required to remember the letters and present them in their normal (meaningful)  order at the end of the Avadhanam.<br />
+		      <b>Varnana :</b> It is composition of a  four line stanza on a subject prescribed by Pruchchaka.<br />
+		      <b>Pushpa Ganana :</b> It is furnishing  the count of flowers presented at different levels.<br />
+		      <b>Vaara Ganana :</b> It is the  identification of days for certain dates, when month and year of that date are  furnished to the Avadhani.<br />
+		      <b>Sarasa Samlap :</b> It is involvement  of Avadhani in medley jovial yet scholarly conversation.<br />
+		      The  Astavadhanam is deemed to have been completed successfully when the Avadhani  recounts correctly all the solutions in a final summation, during &lsquo;Uttar Bhag&rsquo;.
 			</p>
 <!--<section class="welcome-text-box">
   <div class="container">
@@ -162,7 +178,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <p>
 		Noteworthy thing of Dr. Chebolu Seshagiri Rao’s life journey is his last days. He died on 9th April 2015, at NIMS, Hyderabad suffering with Lung Cancer. The only mission of his last days is to write ‘Sri Rama Kalyana Katha Kavya’ as part of Sundar Sapna Kavya Bhag-2. Inspite of many personal hardships, he used to write atleast one stanza per day . The ‘Sita Rama Kalyan Sketch’, which he drew in his last days with shivering hands, (((link to the last sketch))), is the result of his extraordinary will power.		</p>
  <br></br>
-
 		</div>
       </div>
 	 
