--- a/gallery.html
+++ b/gallery.html
@@ -40,6 +40,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <ul>
 			 <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</a></li>
 			 <li><a href="Biography.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Biography</a></li>
+			 <li><a href="Astavadhanam.html"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>Astavadhanam</a></li>
 			 <li><a href="Articles.html"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>Articles</a></li>
 			 <li class="active"><a href="gallery.html"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Gallery</a></li>
 			 <li><a href="Awards & Books.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Awards & Books</a></li>
